# hermes-ultratrm

./: CMakeLists.txt  CMakePresets.json  common.mak  common.mki  htmlhelp.h  htnotes.txt  makefile.hil  ntverp.h  rc_winver.h  term.reg  unimodem.h
cmake/: check_no_external_ssh.cmake  check_unicode_purge.cmake  htmlhelp.def
cmake/toolchains/: llvm-mingw-x64.cmake
cnctstd/: cnctdrvs.c  cncts.c
cncttapi/: cncttapi.c  cncttapi.hh  cncttapi.rc  cnfrmdlg.c  dialdlg.c  enum.c  pcmcia.c  phonedlg.c
comssh/: comssh.c  sources
comstd/: comstd.c  comstd.hh  comstd.rc
comwsock/: comnvt.c  comwsock.c  comwsock.hh
docs/: secure-transports-and-videotex.md  tn3270-smoke-test.md  wine-build.md
emu/: ansi.c  ansiinit.c  autoinit.c  emu.c  emu.h  emu.hh  emu_ansi.c  emu_scr.c  emu_std.c  emudec.hh  emudisp.c  emudlgs.c  emudlgs.rc  emuhdl.c  emustate.c  keytbls.h  minitel.c  minitelf.c  sources  tn3270.c  tn5250.c  videotex.c  viewdata.c  viewdata.hh  viewdini.c  vt100.c  vt100ini.c  vt220.c  vt220ini.c  vt52.c  vt52init.c  vt_chars.c  vt_print.c  vt_xtra.c  vtemu.hh
ext/: defclsf.c  fspage.c  hticons.rc  iconext.c  makefile.t  pageext.c
help/: UltraTerminal.cnt  UltraTerminal.hlp  UltraTerminal.hpj  UltraTerminal.rtf  hyper_pr.rtf
htrn_jis/: htrn_jis.c  htrn_jis.h  htrn_jis.hh  htrn_jis.manifest  htrn_jis.rc  makefile.t  sources
scripts/: run-wine.sh  smoke-tn3270.sh
tdll/: UltraTerminal.def  UltraTerminal.manifest  aboutdlg.c  asciidlg.c  assert.c  assert.h  autosave.c  backscrl.c  banner.c  banner.h  bv_text.c  bv_text.hh  capture.c  capture.h  capture.hh  clipbrd.c  cloop.c  cloop.h  cloop.hh  cloopctl.c  cloopout.c  cloopset.c  cnct.h  cnct.hh  cncthdl.c  cnctstub.c  com.c  com.h  com.hh  comdef.c  comdev.c  comdev.h  comsend.c  cpf_dlg.c  dodialog.c  engnthrd.c  errorbox.c  errorbox.h  features.h  file_io.c  (+93 more)
term/: UltraTerminal.c  UltraTerminal_resources.rc  dialogs.rc  htntupgd.rtf  htperead.doc  htperead.htm  htperead.txt  htpeupgd.rtf  makefile.t  online.rc  orderfrm.doc  orderfrm.htm  orderfrm.txt  res.h  sources  tables.rc  term.c  term.rc  ver_dll.rc  ver_exe.rc  ver_ico.rc  ver_jis.rc  verdll.rc  verexe.rc  verico.rc  verjis.rc  version.h
xfer/: cmprs0.c  cmprs1.c  cmprs2.c  foo.c  hpr.c  hpr.hh  hpr_rcv0.c  hpr_rcv1.c  hpr_res.c  hpr_sd.c  hpr_sd.hh  hpr_snd0.c  hpr_snd1.c  itime.c  itime.h  krm.c  krm_rcv.c  krm_res.c  krm_snd.c  mdmx.c  mdmx.hh  mdmx_crc.c  mdmx_rcv.c  mdmx_res.c  mdmx_sd.c  mdmx_snd.c  x_entry.c  x_hp_dlg.c  x_kr_dlg.c  x_params.c  x_xy_dlg.c  x_zm_dlg.c  xfer.h  xfr_dsp.c  xfr_dsp.h  xfr_srvc.c  xfr_srvc.h  xfr_todo.c  zmdm.c  zmdm_rcv.c  (+2 more)
